tests/struct/duplicate_field.rev
struct Foo {
    a: int
    a: int // error: a field with this name already exists in this structure
}
